added validation endpoint
